// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.updateArtifacts() catches errors 1`] = `
Array [
  Object {
    "artifactError": Object {
      "lockFile": ".terraform.lock.hcl",
      "stderr": "not found",
    },
  },
]
`;

exports[`.updateArtifacts() returns null if unchanged 1`] = `
Array [
  Object {
    "cmd": "terraform providers lock",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns updated .terraform.lock.hcl 1`] = `
Array [
  Object {
    "cmd": "terraform providers lock",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns updated .terraform.lock.hcl for lockfile maintenance 1`] = `
Array [
  Object {
    "cmd": "terraform providers lock",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`.updateArtifacts() returns updated .terraform.lock.hcl with docker 1`] = `
Array [
  Object {
    "cmd": "docker pull renovate/terraform",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker ps --filter name=renovate_terraform -aq",
    "options": Object {
      "encoding": "utf-8",
    },
  },
  Object {
    "cmd": "docker run --rm --name=renovate_terraform --label=renovate_child --user=foobar -v \\"/tmp/github/some/repo\\":\\"/tmp/github/some/repo\\" -w \\"/tmp/github/some/repo\\" renovate/terraform bash -l -c \\"terraform providers lock\\"",
    "options": Object {
      "cwd": "/tmp/github/some/repo",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
